:wrench: Setup build scripts

--- a/package.json
+++ b/package.json
@@ -2,12 +2,19 @@
   "name": "vue-thailand-address",
   "version": "0.0.1",
   "description": "Thai address input for Vue.",
-  "main": "./dist/vue-thailand-address.js",
+  "main": "./dist/vue-thailand-address.common.js",
+  "module": "./dist/vue-thailand-address.esm.js",
+  "unpkg": "./dist/vue-thailand-address.min.js",
+  "browser": "./dist/vue-thailand-address.min.js",
+  "style": "./dist/vue-thailand-address.css",
   "scripts": {
-    "build:unmin": "poi build --format umd --module-name VueThailandAddress",
-    "build:min": "poi build --config ./poi.config.min.js --format umd --module-name VueThailandAddress",
-    "build": "run-s build:unmin build:min",
-    "dev": "poi --config ./poi.dev.config.js",
+    "prebuild": "rimraf ./dist/*",
+    "build:esm": "poi build --config ./poi/poi.esm.config.js",
+    "build:common": "poi build --config ./poi/poi.common.config.js",
+    "build:unmin": "poi build --config ./poi/poi.config.js",
+    "build:min": "poi build --config ./poi/poi.min.config.js",
+    "build": "run-p build:*",
+    "dev": "poi --config ./poi/poi.dev.config.js",
     "sync:db": "node ./scripts/sync-db.js",
     "sync:jql": "node ./scripts/sync-JQL.js",
     "sync": "npm-run-all sync:*",
@@ -46,6 +53,7 @@
     "npm-run-all": "^4.0.2",
     "poi": "^9.1.10",
     "pug": "^2.0.0-rc.2",
+    "rimraf": "^2.6.1",
     "sass-loader": "^6.0.6",
     "vue": "^2.4.2",
     "vuex": "^2.3.1"
