--- a/package.json
+++ b/package.json
@@ -16,7 +16,6 @@
     "build": "run-p build:*",
     "dev": "poi --config ./poi/poi.dev.config.js",
     "sync:db": "node ./scripts/sync-db.js",
-    "sync:jql": "node ./scripts/sync-JQL.js",
     "sync": "npm-run-all sync:*",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -59,6 +58,7 @@
     "vuex": "^2.3.1"
   },
   "dependencies": {
+    "array-filter": "^1.0.0",
     "es6-promise": "^4.1.1",
     "string-similarity": "^1.2.0"
   }
