--- a/package.json
+++ b/package.json
@@ -8,16 +8,16 @@
   "browser": "./dist/vue-thailand-address.min.js",
   "style": "./dist/vue-thailand-address.css",
   "scripts": {
+    "lint": "eslint --ext .js,.vue .",
     "prebuild": "rimraf ./dist/*",
-    "build:esm": "poi build --config ./poi/poi.esm.config.js",
-    "build:common": "poi build --config ./poi/poi.common.config.js",
-    "build:unmin": "poi build --config ./poi/poi.config.js",
-    "build:min": "poi build --config ./poi/poi.min.config.js",
+    "build:common": "webpack --config ./build/webpack.common.config.js",
+    "build:esm": "webpack --config ./build/webpack.esm.config.js",
+    "build:web": "webpack --config ./build/webpack.web.config.js",
     "build": "run-p build:*",
-    "dev": "poi --config ./poi/poi.dev.config.js",
+    "dev": "poi",
     "sync:db": "node ./scripts/sync-db.js",
     "sync": "npm-run-all sync:*",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "npm run lint"
   },
   "repository": {
     "type": "git",
@@ -38,27 +38,45 @@
     "url": "https://github.com/gluons/vue-thailand-address/issues"
   },
   "homepage": "https://github.com/gluons/vue-thailand-address",
+  "browserslist": [
+    "ie >= 9",
+    "Firefox ESR",
+    "last 3 versions"
+  ],
   "peerDependencies": {
     "vue": "2"
   },
   "devDependencies": {
+    "autoprefixer": "^7.1.2",
+    "babel-core": "^6.25.0",
     "babel-eslint": "^7.2.3",
+    "babel-loader": "^7.1.1",
+    "babel-preset-vue-app": "^1.2.0",
     "chalk": "^2.0.1",
+    "copy-webpack-plugin": "^4.0.1",
+    "css-loader": "^0.28.4",
     "eslint": "^4.4.0",
     "eslint-config-gluons": "^2.0.2",
     "eslint-plugin-vue": "^2.1.0",
+    "extract-text-webpack-plugin": "^3.0.0",
     "fs-extra": "^4.0.1",
     "node-sass": "^4.5.3",
     "npm-run-all": "^4.0.2",
     "poi": "^9.2.0",
+    "postcss-loader": "^2.0.6",
     "pug": "^2.0.0-rc.3",
     "rimraf": "^2.6.1",
     "sass-loader": "^6.0.6",
+    "style-loader": "^0.18.2",
     "vue": "^2.4.2",
-    "vuex": "^2.3.1"
+    "vue-loader": "^13.0.4",
+    "vue-template-compiler": "^2.4.2",
+    "webpack": "^3.4.1",
+    "webpack-merge": "^4.1.0"
   },
   "dependencies": {
     "array-filter": "^1.0.0",
-    "string-similarity": "^1.2.0"
+    "string-similarity": "^1.2.0",
+    "vuex": "^2.3.1"
   }
 }
