:hammer: Change script part of .vue file from JavaScript to TypeScript

--- a/.babelrc
+++ b/.babelrc
@@ -3,5 +3,9 @@
 		["vue-app", {
 			"useBuiltIns": true
 		}]
+	],
+	"plugins": [
+		"transform-decorators-legacy",
+		"transform-class-properties"
 	]
 }
