--- a/package.json
+++ b/package.json
@@ -49,23 +49,26 @@
   "devDependencies": {
     "@types/node": "6",
     "@types/string-similarity": "^1.2.0",
-    "@types/webpack": "^3.0.5",
+    "@types/webpack": "^3.0.6",
     "autoprefixer": "^7.1.2",
     "babel-core": "^6.25.0",
     "babel-eslint": "^7.2.3",
     "babel-loader": "^7.1.1",
+    "babel-plugin-transform-class-properties": "^6.24.1",
+    "babel-plugin-transform-decorators-legacy": "^1.3.4",
     "babel-preset-vue-app": "^1.2.0",
-    "chalk": "^2.0.1",
+    "chalk": "^2.1.0",
     "copy-webpack-plugin": "^4.0.1",
     "css-loader": "^0.28.4",
-    "eslint": "^4.4.0",
+    "eslint": "^4.4.1",
     "eslint-config-gluons": "^2.0.2",
     "eslint-plugin-vue": "^2.1.0",
     "extract-text-webpack-plugin": "^3.0.0",
     "fs-extra": "^4.0.1",
     "node-sass": "^4.5.3",
     "npm-run-all": "^4.0.2",
-    "poi": "^9.2.0",
+    "poi": "^9.2.3",
+    "poi-preset-typescript": "^9.0.1",
     "postcss-loader": "^2.0.6",
     "pug": "^2.0.0-rc.3",
     "rimraf": "^2.6.1",
@@ -73,13 +76,15 @@
     "style-loader": "^0.18.2",
     "ts-loader": "^2.3.2",
     "ts-node": "^3.3.0",
-    "tslint": "^5.5.0",
+    "tslint": "^5.6.0",
     "tslint-config-gluons": "^1.0.5",
     "typescript": "^2.4.2",
     "vue": "^2.4.2",
+    "vue-class-component": "^5.0.2",
     "vue-loader": "^13.0.4",
+    "vue-property-decorator": "^5.2.1",
     "vue-template-compiler": "^2.4.2",
-    "webpack": "^3.4.1",
+    "webpack": "^3.5.2",
     "webpack-merge": "^4.1.0"
   },
   "dependencies": {
