--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,6 +10,7 @@
 		"moduleResolution": "node",
 		"module": "es6",
 		"target": "es5",
+		"experimentalDecorators": true,
 		"outDir": "./dist/",
 		"sourceMap": true,
 		"paths": {
