:white_check_mark: Add tests

--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "dev": "poi",
     "sync:db": "ts-node ./scripts/sync-db.ts",
     "sync": "cross-env TS_NODE_COMPILER_OPTIONS={\\\"module\\\":\\\"commonjs\\\"} npm-run-all sync:*",
-    "test": "npm run lint"
+    "test:single": "npm run lint && karma start --single-run",
+    "test": "npm run lint && karma start"
   },
   "repository": {
     "type": "git",
@@ -49,18 +50,22 @@
     "vue": "2"
   },
   "devDependencies": {
+    "@types/chai": "^4.0.3",
     "@types/copy-webpack-plugin": "^4.0.0",
     "@types/extract-text-webpack-plugin": "^2.1.0",
+    "@types/mocha": "^2.2.41",
     "@types/node": "6",
     "@types/string-similarity": "^1.2.0",
-    "@types/webpack": "^3.0.6",
+    "@types/webpack": "^3.0.8",
     "autoprefixer": "^7.1.2",
+    "avoriaz": "^3.2.0",
     "babel-core": "^6.25.0",
     "babel-eslint": "^7.2.3",
     "babel-loader": "^7.1.1",
     "babel-plugin-transform-class-properties": "^6.24.1",
     "babel-plugin-transform-decorators-legacy": "^1.3.4",
     "babel-preset-vue-app": "^1.2.0",
+    "chai": "^4.1.1",
     "chalk": "^2.1.0",
     "copy-webpack-plugin": "^4.0.1",
     "cross-env": "^5.0.5",
@@ -70,9 +75,16 @@
     "eslint-plugin-vue": "^2.1.0",
     "extract-text-webpack-plugin": "^3.0.0",
     "fs-extra": "^4.0.1",
+    "karma": "^1.7.0",
+    "karma-firefox-launcher": "^1.0.1",
+    "karma-mocha": "^1.3.0",
+    "karma-mocha-reporter": "^2.2.3",
+    "karma-sourcemap-loader": "^0.3.7",
+    "karma-webpack": "^2.0.4",
+    "mocha": "^3.5.0",
     "node-sass": "^4.5.3",
     "npm-run-all": "^4.0.2",
-    "poi": "^9.2.3",
+    "poi": "^9.2.4",
     "poi-preset-typescript": "^9.0.1",
     "postcss-loader": "^2.0.6",
     "pug": "^2.0.0-rc.3",
@@ -89,7 +101,7 @@
     "vue-loader": "^13.0.4",
     "vue-property-decorator": "^5.2.1",
     "vue-template-compiler": "^2.4.2",
-    "webpack": "^3.5.2",
+    "webpack": "^3.5.4",
     "webpack-merge": "^4.1.0"
   },
   "dependencies": {
