--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "vue-thailand-address",
-  "version": "0.0.1",
+  "version": "1.0.0",
   "description": "Thai address input for Vue.",
   "main": "./dist/vue-thailand-address.common.js",
   "module": "./dist/vue-thailand-address.esm.js",
@@ -8,6 +8,11 @@
   "browser": "./dist/vue-thailand-address.min.js",
   "style": "./dist/vue-thailand-address.css",
   "typings": "./types/src/index.d.ts",
+  "files": [
+    "tsconfig.json",
+    "dist",
+    "types"
+  ],
   "scripts": {
     "lint:js": "eslint .",
     "lint:ts": "tslint -p .",
