--- a/package.json
+++ b/package.json
@@ -52,9 +52,7 @@
     "Firefox ESR",
     "last 3 versions"
   ],
-  "peerDependencies": {
-    "vue": "2"
-  },
+  "peerDependencies": {},
   "devDependencies": {
     "@types/chai": "^4.0.3",
     "@types/copy-webpack-plugin": "^4.0.0",
@@ -102,16 +100,16 @@
     "tslint": "^5.6.0",
     "tslint-config-gluons": "^1.0.5",
     "typescript": "^2.4.2",
-    "vue": "^2.4.2",
-    "vue-class-component": "^5.0.2",
-    "vue-loader": "^13.0.4",
-    "vue-template-compiler": "^2.4.2",
+    "vue": "^2.5.2",
+    "vue-class-component": "^6.0.0",
+    "vue-loader": "^13.3.0",
+    "vue-template-compiler": "^2.5.2",
     "webpack": "^3.7.1",
     "webpack-merge": "^4.1.0"
   },
   "dependencies": {
     "array-filter": "^1.0.0",
     "string-similarity": "^1.2.0",
-    "vuex": "^2.3.1"
+    "vuex": "^3.0.0"
   }
 }
