--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,7 +7,7 @@
 			"es2015"
 		],
 		"moduleResolution": "node",
-		"module": "es2015",
+		"module": "esnext",
 		"target": "es5",
 		"experimentalDecorators": true,
 		"outDir": "./dist/",
