--- a/package.json
+++ b/package.json
@@ -62,7 +62,6 @@
     "@types/extract-text-webpack-plugin": "^3.0.0",
     "@types/mocha": "^2.2.41",
     "@types/node": "8",
-    "@types/string-similarity": "^1.2.0",
     "@types/webpack": "^3.0.8",
     "autoprefixer": "^7.1.2",
     "avoriaz": "^6.0.1",
@@ -110,6 +109,6 @@
   },
   "dependencies": {
     "array-filter": "^1.0.0",
-    "string-similarity": "^1.2.0"
+    "leven": "^2.1.0"
   }
 }
