--- a/package.json
+++ b/package.json
@@ -24,8 +24,8 @@
     "build:web": "webpack --config ./build/webpack.web.config.ts",
     "build": "cross-env TS_NODE_COMPILER_OPTIONS={\\\"module\\\":\\\"commonjs\\\"} run-p build:*",
     "dev": "poi",
-    "sync:db": "ts-node ./scripts/sync-db.ts",
-    "sync": "cross-env TS_NODE_COMPILER_OPTIONS={\\\"module\\\":\\\"commonjs\\\"} npm-run-all sync:*",
+    "sync:db": "ts-node -O {\\\"module\\\":\\\"commonjs\\\"} ./scripts/sync-db.ts",
+    "sync": "npm-run-all sync:*",
     "test:watch": "npm run lint && karma start --no-single-run",
     "test": "npm run lint && karma start"
   },
@@ -78,7 +78,6 @@
     "eslint-config-gluons": "^3.0.0",
     "eslint-plugin-vue": "^4.5.0",
     "extract-text-webpack-plugin": "^3.0.0",
-    "fs-extra": "^6.0.0",
     "karma": "^1.7.0",
     "karma-firefox-launcher": "^1.0.1",
     "karma-mocha": "^1.3.0",
@@ -96,7 +95,7 @@
     "sass-loader": "^7.0.1",
     "style-loader": "^0.21.0",
     "ts-loader": "^3.1.1",
-    "ts-node": "^3.3.0",
+    "ts-node": "^6.0.2",
     "tslint": "^5.6.0",
     "tslint-config-gluons": "^1.0.5",
     "typescript": "^2.4.2",
