--- a/package.json
+++ b/package.json
@@ -19,10 +19,7 @@
     "lint:ts": "tslint -p .",
     "lint": "npm-run-all lint:*",
     "prebuild": "rimraf ./dist/* ./types/*",
-    "build:common": "webpack --config ./build/webpack.common.config.ts",
-    "build:esm": "webpack --config ./build/webpack.esm.config.ts",
-    "build:web": "webpack --config ./build/webpack.web.config.ts",
-    "build": "cross-env TS_NODE_COMPILER_OPTIONS={\\\"module\\\":\\\"commonjs\\\"} run-p build:*",
+    "build": "cross-env TS_NODE_COMPILER_OPTIONS={\\\"module\\\":\\\"commonjs\\\"} webpack --config ./build/webpack.config.ts",
     "dev": "poi",
     "sync:db": "ts-node -O {\\\"module\\\":\\\"commonjs\\\"} ./scripts/sync-db.ts",
     "sync": "npm-run-all sync:*",
@@ -59,52 +56,53 @@
   "devDependencies": {
     "@types/chai": "^4.0.3",
     "@types/copy-webpack-plugin": "^4.0.0",
-    "@types/extract-text-webpack-plugin": "^3.0.0",
+    "@types/mini-css-extract-plugin": "^0.2.0",
     "@types/mocha": "^5.2.0",
     "@types/node": "8",
-    "@types/webpack": "^3.0.8",
+    "@types/webpack": "^4.1.4",
+    "@types/webpack-merge": "^4.1.3",
     "autoprefixer": "^8.4.1",
     "avoriaz": "^6.0.1",
-    "babel-core": "^6.25.0",
     "babel-eslint": "^8.0.1",
-    "babel-loader": "^7.1.2",
-    "babel-preset-vue-app": "^2.0.0",
     "chai": "^4.1.1",
-    "chalk": "^2.1.0",
     "copy-webpack-plugin": "^4.0.1",
     "cross-env": "^5.0.5",
     "css-loader": "^0.28.4",
     "eslint": "^4.4.1",
     "eslint-config-gluons": "^3.0.0",
     "eslint-plugin-vue": "^4.5.0",
-    "extract-text-webpack-plugin": "^3.0.0",
     "karma": "^2.0.2",
     "karma-firefox-launcher": "^1.0.1",
     "karma-mocha": "^1.3.0",
     "karma-mocha-reporter": "^2.2.3",
     "karma-sourcemap-loader": "^0.3.7",
     "karma-webpack": "^3.0.0",
+    "mini-css-extract-plugin": "^0.4.0",
     "mocha": "^5.1.1",
     "node-sass": "^4.5.3",
     "npm-run-all": "^4.0.2",
     "poi": "^9.2.4",
     "poi-preset-typescript": "^9.0.1",
-    "postcss-loader": "^2.0.6",
+    "postcss-loader": "^2.1.5",
     "pug": "^2.0.0-rc.3",
+    "pug-plain-loader": "^1.0.0",
     "rimraf": "^2.6.1",
     "sass-loader": "^7.0.1",
     "style-loader": "^0.21.0",
-    "ts-loader": "^3.1.1",
+    "ts-loader": "^4.2.0",
     "ts-node": "^6.0.2",
     "tslint": "^5.6.0",
     "tslint-config-gluons": "^1.0.5",
     "typescript": "^2.4.2",
     "vue": "^2.5.5",
     "vue-class-component": "^6.0.0",
-    "vue-loader": "^13.5.0",
+    "vue-loader": "^15.0.9",
     "vue-template-compiler": "^2.5.5",
-    "webpack": "^3.7.1",
-    "webpack-merge": "^4.1.0"
+    "webpack": "^4.7.0",
+    "webpack-cli": "^2.1.2",
+    "webpack-merge": "^4.1.0",
+    "webpack-stylish": "^0.1.8",
+    "webpackbar": "^2.6.1"
   },
   "dependencies": {
     "array-filter": "^1.0.0",
