--- a/package.json
+++ b/package.json
@@ -76,7 +76,7 @@
     "karma-mocha": "^1.3.0",
     "karma-mocha-reporter": "^2.2.3",
     "karma-sourcemap-loader": "^0.3.7",
-    "karma-webpack": "^3.0.0",
+    "karma-webpack": "^4.0.0-beta.0",
     "mini-css-extract-plugin": "^0.4.0",
     "mocha": "^5.1.1",
     "node-sass": "^4.5.3",
@@ -84,7 +84,7 @@
     "poi": "^9.2.4",
     "poi-preset-typescript": "^9.0.1",
     "postcss-loader": "^2.1.5",
-    "pug": "^2.0.0-rc.3",
+    "pug": "^2.0.3",
     "pug-plain-loader": "^1.0.0",
     "rimraf": "^2.6.1",
     "sass-loader": "^7.0.1",
