--- a/.travis.yml
+++ b/.travis.yml
@@ -1,12 +1,11 @@
 language: node_js
 node_js:
-  - "8"
-  - "7"
-  - "6"
+  - "node"
+  - "lts/carbon"
+  - "lts/boron"
 cache: yarn
 before_script:
   - export DISPLAY=:99.0
   - sh -e /etc/init.d/xvfb start
-  - sleep 3
 addons:
   firefox: "latest"
