--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "lint": "npm-run-all lint:*",
     "prebuild": "rimraf ./dist/* ./types/*",
     "build": "cross-env TS_NODE_COMPILER_OPTIONS={\\\"module\\\":\\\"commonjs\\\"} webpack --config ./config/webpack.config.ts",
-    "dev": "poi",
+    "dev": "cross-env TS_NODE_COMPILER_OPTIONS={\\\"module\\\":\\\"commonjs\\\"} webpack-dev-server --config ./config/webpack.config.dev.ts --color",
     "sync:db": "ts-node -O {\\\"module\\\":\\\"commonjs\\\"} ./scripts/sync-db.ts",
     "sync": "npm-run-all sync:*",
     "test:watch": "npm run lint && karma start --no-single-run",
@@ -56,21 +56,28 @@
   "devDependencies": {
     "@types/chai": "^4.0.3",
     "@types/copy-webpack-plugin": "^4.0.0",
+    "@types/html-webpack-plugin": "^2.30.3",
     "@types/mini-css-extract-plugin": "^0.2.0",
     "@types/mocha": "^5.2.0",
     "@types/node": "8",
     "@types/webpack": "^4.1.4",
     "@types/webpack-merge": "^4.1.3",
+    "ansi-escapes": "^3.1.0",
     "autoprefixer": "^8.4.1",
     "avoriaz": "^6.0.1",
     "babel-eslint": "^8.0.1",
     "chai": "^4.1.1",
+    "chalk": "^2.4.1",
+    "clipboardy": "^1.2.3",
     "copy-webpack-plugin": "^4.0.1",
     "cross-env": "^5.0.5",
     "css-loader": "^0.28.4",
+    "ejs-loader": "^0.3.1",
     "eslint": "^4.4.1",
     "eslint-config-gluons": "^3.0.0",
     "eslint-plugin-vue": "^4.5.0",
+    "fork-ts-checker-webpack-plugin": "^0.4.1",
+    "html-webpack-plugin": "^3.2.0",
     "karma": "^2.0.2",
     "karma-firefox-launcher": "^1.0.1",
     "karma-mocha": "^1.3.0",
@@ -81,11 +88,13 @@
     "mocha": "^5.1.1",
     "node-sass": "^4.5.3",
     "npm-run-all": "^4.0.2",
+    "post-compile-webpack-plugin": "^0.1.2",
     "postcss-loader": "^2.1.5",
     "pug": "^2.0.3",
     "pug-plain-loader": "^1.0.0",
     "rimraf": "^2.6.1",
     "sass-loader": "^7.0.1",
+    "terminal-link": "^1.1.0",
     "ts-loader": "^4.2.0",
     "ts-node": "^6.0.2",
     "tslint": "^5.6.0",
@@ -97,6 +106,7 @@
     "vue-template-compiler": "^2.5.5",
     "webpack": "^4.7.0",
     "webpack-cli": "^2.1.2",
+    "webpack-dev-server": "^3.1.4",
     "webpack-merge": "^4.1.0",
     "webpack-stylish": "^0.1.8",
     "webpackbar": "^2.6.1"
