--- a/package.json
+++ b/package.json
@@ -62,12 +62,10 @@
     "@types/node": "8",
     "@types/webpack": "^4.1.4",
     "@types/webpack-merge": "^4.1.3",
-    "ansi-escapes": "^3.1.0",
     "autoprefixer": "^8.4.1",
     "avoriaz": "^6.0.1",
     "babel-eslint": "^8.0.1",
     "chai": "^4.1.1",
-    "chalk": "^2.4.1",
     "clipboardy": "^1.2.3",
     "copy-webpack-plugin": "^4.0.1",
     "cross-env": "^5.0.5",
@@ -77,6 +75,7 @@
     "eslint-config-gluons": "^3.0.0",
     "eslint-plugin-vue": "^4.5.0",
     "fork-ts-checker-webpack-plugin": "^0.4.1",
+    "friendly-errors-webpack-plugin": "^1.7.0",
     "html-webpack-plugin": "^3.2.0",
     "karma": "^2.0.2",
     "karma-firefox-launcher": "^1.0.1",
