--- a/package.json
+++ b/package.json
@@ -62,8 +62,8 @@
     "@types/node": "8",
     "@types/webpack": "^4.1.4",
     "@types/webpack-merge": "^4.1.3",
+    "@vue/test-utils": "^1.0.0-beta.16",
     "autoprefixer": "^8.4.1",
-    "avoriaz": "^6.0.1",
     "babel-eslint": "^8.0.1",
     "chai": "^4.1.1",
     "clipboardy": "^1.2.3",
