--- a/package.json
+++ b/package.json
@@ -60,7 +60,7 @@
     "@types/mini-css-extract-plugin": "^0.2.0",
     "@types/mocha": "^5.2.0",
     "@types/node": "8",
-    "@types/webpack": "^4.1.4",
+    "@types/webpack": "^4.1.6",
     "@types/webpack-merge": "^4.1.3",
     "@vue/test-utils": "^1.0.0-beta.16",
     "autoprefixer": "^8.4.1",
@@ -113,5 +113,8 @@
   "dependencies": {
     "array-filter": "^1.0.0",
     "leven": "^2.1.0"
+  },
+  "resolutions": {
+    "@types/webpack": "^4.1.6"
   }
 }
