--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,16 +11,13 @@
 		"moduleResolution": "node",
 		"esModuleInterop": true,
 		"experimentalDecorators": true,
-		"outDir": "./dist/",
 		"baseUrl": ".",
 		"paths": {
 			"@/*": [
 				"./src/*"
 			]
 		},
-		"sourceMap": true,
-		"declaration": true,
-		"declarationDir": "../types"
+		"sourceMap": true
 	},
 	"include": [
 		"./src/**/*",
