--- a/tsconfig.prod.json
+++ b/tsconfig.prod.json
@@ -1,7 +1,8 @@
 {
 	"extends": "./tsconfig",
 	"compilerOptions": {
-		"declaration": true
+		"declaration": true,
+		"declarationDir": "types"
 	},
 	"exclude": [
 		"./dev/**/*",
