--- a/package.json
+++ b/package.json
@@ -46,9 +46,7 @@
   },
   "homepage": "https://gluons.github.io/vue-thailand-address/",
   "browserslist": [
-    "ie >= 9",
-    "Firefox ESR",
-    "last 3 versions"
+    "extends browserslist-config-vue"
   ],
   "peerDependencies": {
     "vue": ">=2.4.0"
@@ -65,6 +63,7 @@
     "@vue/test-utils": "^1.0.0-beta.16",
     "autoprefixer": "^8.4.1",
     "babel-eslint": "^8.0.1",
+    "browserslist-config-vue": "^1.0.3",
     "chai": "^4.1.1",
     "clipboardy": "^1.2.3",
     "copy-webpack-plugin": "^4.0.1",
@@ -115,6 +114,8 @@
     "leven": "^2.1.0"
   },
   "resolutions": {
-    "@types/webpack": "^4.1.6"
+    "@types/webpack": "^4.1.6",
+    "css-loader/cssnano/autoprefixer": "^8.4.1",
+    "css-loader/**/browserslist": "^3.2.6"
   }
 }
