--- a/package.json
+++ b/package.json
@@ -21,8 +21,7 @@
     "dev": "vue-pack dev",
     "sync:db": "ts-node -O {\\\"module\\\":\\\"commonjs\\\"} ./scripts/sync-db.ts",
     "sync": "npm-run-all sync:*",
-    "test:watch": "npm run lint && karma start --no-single-run",
-    "test": "npm run lint && karma start"
+    "test": "npm run lint"
   },
   "repository": {
     "type": "git",
@@ -54,37 +53,19 @@
     "@gluons/vue-pack-banner-plugin": "^1.10.0",
     "@gluons/vue-pack-cli": "^1.10.0",
     "@gluons/vue-pack-splitchunks-plugin": "^1.10.0",
-    "@types/chai": "^4.1.5",
     "@types/copy-webpack-plugin": "^4.4.2",
-    "@types/mocha": "^5.2.5",
     "@types/node": "8",
-    "@types/webpack": "^4.4.12",
     "@types/webpack-node-externals": "^1.6.3",
-    "@vue/test-utils": "^1.0.0-beta.25",
     "babel-eslint": "^9.0.0",
     "browserslist-config-vue": "^1.0.3",
-    "chai": "^4.1.1",
     "clipboardy": "^1.2.3",
     "copy-webpack-plugin": "^4.5.2",
     "cross-env": "^5.2.0",
-    "css-loader": "^1.0.0",
     "eslint": "^5.6.0",
     "eslint-config-gluons": "^4.0.0",
     "eslint-plugin-vue": "^4.7.1",
-    "karma": "^3.0.0",
-    "karma-firefox-launcher": "^1.0.1",
-    "karma-mocha": "^1.3.0",
-    "karma-mocha-reporter": "^2.2.3",
-    "karma-sourcemap-loader": "^0.3.7",
-    "karma-webpack": "^4.0.0-beta.0",
-    "mocha": "^5.2.0",
-    "node-sass": "^4.9.3",
     "npm-run-all": "^4.0.2",
-    "postcss-loader": "^3.0.0",
-    "pug": "^2.0.3",
-    "pug-plain-loader": "^1.0.0",
     "rimraf": "^2.6.1",
-    "sass-loader": "^7.1.0",
     "terminal-link": "^1.1.0",
     "ts-node": "^7.0.1",
     "tslint": "^5.11.0",
@@ -92,9 +73,6 @@
     "typescript": "^3.0.3",
     "vue": "^2.5.17",
     "vue-class-component": "^6.0.0",
-    "vue-loader": "^15.4.2",
-    "vue-template-compiler": "^2.5.17",
-    "webpack": "^4.19.1",
     "webpack-node-externals": "^1.7.2"
   },
   "dependencies": {
