:building_construction: Move TypeScript declarations to `dist` directory
Now, all output files are stored together.

--- a/package.json
+++ b/package.json
@@ -4,11 +4,11 @@
   "description": "Thai address input for Vue.",
   "main": "./dist/vue-thailand-address.cjs.js",
   "module": "./dist/vue-thailand-address.es.js",
-  "jsdelivr": "./dist/vue-thailand-address.min.js",
-  "unpkg": "./dist/vue-thailand-address.min.js",
-  "browser": "./dist/vue-thailand-address.min.js",
+  "jsdelivr": "./dist/vue-thailand-address.web.min.js",
+  "unpkg": "./dist/vue-thailand-address.web.min.js",
+  "browser": "./dist/vue-thailand-address.web.min.js",
   "style": "./dist/vue-thailand-address.css",
-  "typings": "./dist/types/index.d.ts",
+  "typings": "./dist/index.d.ts",
   "files": [
     "dist"
   ],
@@ -16,7 +16,6 @@
     "lint:js": "eslint .",
     "lint:ts": "tslint -p .",
     "lint": "npm-run-all lint:*",
-    "prebuild": "rimraf ./dist/* ./types/*",
     "build": "vue-pack",
     "dev": "vue-pack dev",
     "sync:db": "ts-node -O {\\\"module\\\":\\\"commonjs\\\"} ./scripts/sync-db.ts",
@@ -65,7 +64,6 @@
     "eslint-config-gluons": "^4.0.0",
     "eslint-plugin-vue": "^4.7.1",
     "npm-run-all": "^4.0.2",
-    "rimraf": "^2.6.1",
     "terminal-link": "^1.1.0",
     "ts-node": "^7.0.1",
     "tslint": "^5.11.0",
