:art: Update sync script

--- a/package.json
+++ b/package.json
@@ -18,8 +18,7 @@
     "lint": "npm-run-all lint:*",
     "build": "vue-pack",
     "dev": "vue-pack dev",
-    "sync:db": "ts-node -O {\\\"module\\\":\\\"commonjs\\\"} ./scripts/sync-db.ts",
-    "sync": "npm-run-all sync:*",
+    "sync": "ts-node -O {\\\"module\\\":\\\"commonjs\\\"} ./scripts/sync-db.ts",
     "test": "npm run lint"
   },
   "repository": {
@@ -53,12 +52,15 @@
     "@gluons/vue-pack-cli": "^1.11.0",
     "@gluons/vue-pack-splitchunks-plugin": "^1.11.0",
     "@types/copy-webpack-plugin": "^4.4.2",
+    "@types/cp-file": "^4.2.0",
     "@types/node": "8",
     "@types/webpack-node-externals": "^1.6.3",
     "babel-eslint": "^9.0.0",
     "browserslist-config-vue": "^1.0.3",
+    "chalk": "^2.4.1",
     "clipboardy": "^1.2.3",
     "copy-webpack-plugin": "^4.5.2",
+    "cp-file": "^6.0.0",
     "cross-env": "^5.2.0",
     "eslint": "^5.6.0",
     "eslint-config-gluons": "^4.0.0",
