:fire: Remove ESLint
No need. All codes are TypeScript.

--- a/package.json
+++ b/package.json
@@ -13,9 +13,7 @@
     "dist"
   ],
   "scripts": {
-    "lint:js": "eslint .",
-    "lint:ts": "tslint -p .",
-    "lint": "npm-run-all lint:*",
+    "lint": "tslint -p .",
     "build": "vue-pack",
     "dev": "vue-pack dev",
     "sync": "ts-node -O {\\\"module\\\":\\\"commonjs\\\"} ./scripts/sync-db.ts",
@@ -52,18 +50,9 @@
     "@types/cp-file": "^4.2.0",
     "@types/node": "8",
     "@types/webpack-node-externals": "^1.6.3",
-    "babel-eslint": "^9.0.0",
-    "browserslist-config-vue": "^1.0.3",
     "chalk": "^2.4.1",
-    "clipboardy": "^1.2.3",
     "copy-webpack-plugin": "^4.5.2",
     "cp-file": "^6.0.0",
-    "cross-env": "^5.2.0",
-    "eslint": "^5.6.0",
-    "eslint-config-gluons": "^4.0.0",
-    "eslint-plugin-vue": "^4.7.1",
-    "npm-run-all": "^4.0.2",
-    "terminal-link": "^1.1.0",
     "ts-node": "^7.0.1",
     "tslint": "^5.11.0",
     "tslint-config-gluons": "^2.0.3",
