--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,8 +1,5 @@
 // Place your settings in this file to overwrite default and user settings.
 {
 	"typescript.tsdk": "./node_modules/typescript/lib",
-	"eslint.validate": [
-		"javascript",
-		"javascriptreact"
-	]
+	"eslint.enable": false
 }
