--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "@gluons/vue-pack-splitchunks-plugin": "^1.12.0",
     "@types/copy-webpack-plugin": "^4.4.2",
     "@types/cp-file": "^4.2.0",
+    "@types/leven": "^2.1.1",
     "@types/node": "8",
     "@types/webpack-node-externals": "^1.6.3",
     "chalk": "^2.4.1",
