:building_construction: Remove path mapping
All declarations are broken with path mapping.
Remove the useless feature that break all path in declaration files.

Microsoft/TypeScript#10866 has been closed and ignored.
This problem won't be resolved by @Microsoft team anymore.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,16 +13,7 @@
 		"sourceMap": true,
 		"noUnusedLocals": true,
 		"noUnusedParameters": true,
-		"declaration": true,
-		"baseUrl": ".",
-		"paths": {
-			"@/*": ["src/*"],
-			"#/*": ["src/types/*"],
-			"@data/*": ["src/data/*"],
-			"@comp/*": ["src/components/*"],
-			"@lib/*": ["src/lib/*"],
-			"@utils/*": ["src/utils/*"]
-		}
+		"declaration": true
 	},
 	"include": [
 		"src"
