--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "@gluons/vue-pack": "^1.13.0",
     "@gluons/vue-pack-banner-plugin": "^1.13.0",
     "@gluons/vue-pack-cli": "^1.13.0",
+    "@gluons/vue-pack-copy-plugin": "^1.13.0",
     "@gluons/vue-pack-splitchunks-plugin": "^1.13.0",
     "@types/copy-webpack-plugin": "^4.4.2",
     "@types/cp-file": "^4.2.0",
