--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "build": "vue-pack",
     "dev": "vue-pack dev",
     "sync": "ts-node -O {\\\"module\\\":\\\"commonjs\\\"} ./scripts/sync-db.ts",
-    "test": "npm run lint"
+    "test": "npm run lint && jest -c jest.config.json --verbose"
   },
   "repository": {
     "type": "git",
@@ -42,6 +42,7 @@
     "vue": ">=2.4.0"
   },
   "devDependencies": {
+    "@babel/core": "^7.1.2",
     "@gluons/vue-pack": "^1.13.0",
     "@gluons/vue-pack-banner-plugin": "^1.13.0",
     "@gluons/vue-pack-cli": "^1.13.0",
@@ -49,20 +50,27 @@
     "@gluons/vue-pack-splitchunks-plugin": "^1.13.0",
     "@types/copy-webpack-plugin": "^4.4.2",
     "@types/cp-file": "^4.2.0",
+    "@types/jest": "^23.3.3",
     "@types/leven": "^2.1.1",
     "@types/lodash.pick": "^4.4.4",
     "@types/node": "8",
     "@types/webpack-node-externals": "^1.6.3",
+    "@vue/test-utils": "^1.0.0-beta.25",
+    "babel-core": "^7.0.0-bridge.0",
     "chalk": "^2.4.1",
     "copy-webpack-plugin": "^4.5.2",
     "cp-file": "^6.0.0",
+    "jest": "^23.6.0",
+    "ts-jest": "^23.10.4",
     "ts-node": "^7.0.1",
     "tslint": "^5.11.0",
     "tslint-config-gluons": "^2.0.3",
     "typescript": "^3.1.1",
     "vue": "^2.5.17",
     "vue-class-component": "^6.0.0",
+    "vue-jest": "^2.6.0",
     "vue-property-decorator": "^7.1.1",
+    "vue-template-compiler": "^2.5.17",
     "webpack-node-externals": "^1.7.2"
   },
   "dependencies": {
