--- a/package.json
+++ b/package.json
@@ -70,8 +70,7 @@
     "vue-class-component": "^6.3.0",
     "vue-jest": "^2.6.0",
     "vue-property-decorator": "^7.1.1",
-    "vue-template-compiler": "^2.5.17",
-    "webpack-node-externals": "^1.7.2"
+    "vue-template-compiler": "^2.5.17"
   },
   "dependencies": {
     "leven": "^2.1.0",
