--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
   },
   "dependencies": {
     "flag-icon-css": "^3.2.0",
+    "highlight.js": "^9.13.0",
     "iview": "^3.1.3",
     "vue": "^2.5.17",
     "vue-class-component": "^6.0.0",
+    "vue-highlight.js": "^2.2.0",
     "vue-property-decorator": "^7.0.0",
     "vue-router": "^3.0.1"
   },
@@ -25,6 +27,7 @@
     "@vue/cli-plugin-typescript": "^3.0.1",
     "@vue/cli-service": "^3.0.1",
     "browserslist-config-vue": "^1.0.3",
+    "jstransformer-escape-html": "^1.1.0",
     "node-sass": "^4.9.0",
     "prettier": "^1.14.3",
     "sass-loader": "^7.0.1",
