--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "A documentation website for Vue Thailand Address.",
   "private": true,
   "scripts": {
-    "dev": "vue-cli-service serve",
-    "build": "vue-cli-service build",
+    "dev": "cross-env NODE_ENV=development vue-cli-service serve",
+    "build": "cross-env NODE_ENV=production vue-cli-service build",
     "format:html": "prettyhtml \"public/*.html\"",
     "format:code": "prettier \"**/*.{js,ts,vue}\" --write",
     "lint": "vue-cli-service lint"
@@ -27,6 +27,7 @@
     "@vue/cli-plugin-typescript": "^3.0.1",
     "@vue/cli-service": "^3.0.1",
     "browserslist-config-vue": "^1.0.3",
+    "cross-env": "^5.2.0",
     "jstransformer-escape-html": "^1.1.0",
     "node-sass": "^4.9.0",
     "prettier": "^1.14.3",
