--- a/package.json
+++ b/package.json
@@ -11,13 +11,14 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
-    "@fortawesome/fontawesome-free": "^5.4.1",
+    "buefy": "^0.7.0",
+    "bulma-divider": "^2.0.1",
     "flag-icon-css": "^3.2.0",
     "highlight.js": "^9.13.0",
-    "iview": "^3.1.3",
     "vue": "^2.5.17",
     "vue-class-component": "^6.0.0",
     "vue-highlight.js": "^2.2.0",
+    "vue-progressbar": "^0.7.5",
     "vue-property-decorator": "^7.0.0",
     "vue-router": "^3.0.1"
   },
