--- a/package.json
+++ b/package.json
@@ -11,11 +11,13 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^5.4.1",
     "buefy": "^0.7.0",
     "bulma-divider": "^2.0.1",
     "flag-icon-css": "^3.2.0",
     "highlight.js": "^9.13.0",
     "jump.js": "^1.0.2",
+    "typeface-fira-mono": "^0.0.54",
     "vue": "^2.5.17",
     "vue-class-component": "^6.0.0",
     "vue-highlight.js": "^2.2.0",
