--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "build": "cross-env NODE_ENV=production vue-cli-service build",
     "format:html": "prettyhtml \"public/*.html\"",
     "format:code": "prettier \"**/*.{js,ts,vue}\" --write",
+    "format": "run-p format:*",
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
@@ -37,6 +38,7 @@
     "cross-env": "^5.2.0",
     "jstransformer-escape-html": "^1.1.0",
     "node-sass": "^4.9.0",
+    "npm-run-all": "^4.1.3",
     "prettier": "^1.14.3",
     "sass-loader": "^7.0.1",
     "tslint": "^5.11.0",
