--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@fortawesome/fontawesome-free": "^5.4.1",
     "buefy": "^0.7.0",
     "bulma-divider": "^2.0.1",
+    "copy-text-to-clipboard": "^1.0.4",
     "flag-icon-css": "^3.2.1",
     "highlight.js": "^9.13.1",
     "jump.js": "^1.0.2",
