--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "dev": "cross-env NODE_ENV=development vue-cli-service serve",
     "build": "cross-env NODE_ENV=production vue-cli-service build",
+    "postbuild": "ts-node -O \"{ \\\"module\\\": \\\"commonjs\\\" }\" ./scripts/generateSitemap.ts",
     "format:html": "prettyhtml \"public/*.html\"",
     "format:code": "prettier \"**/*.{js,ts,vue}\" --write",
     "format": "run-p format:*",
@@ -33,6 +34,7 @@
     "@starptech/prettyhtml": "^0.3.3",
     "@types/jump.js": "^1.0.2",
     "@types/node": "8",
+    "@types/signale": "^1.2.0",
     "@vue/cli-plugin-typescript": "^3.0.1",
     "@vue/cli-service": "^3.0.1",
     "browserslist-config-vue": "^1.0.3",
@@ -42,6 +44,9 @@
     "npm-run-all": "^4.1.3",
     "prettier": "^1.14.3",
     "sass-loader": "^7.0.1",
+    "signale": "^1.3.0",
+    "sitemap": "^2.1.0",
+    "ts-node": "^7.0.1",
     "tslint": "^5.11.0",
     "tslint-config-gluons": "^2.0.3",
     "typescript": "^3.0.0",
