--- a/package.json
+++ b/package.json
@@ -73,5 +73,8 @@
   "dependencies": {
     "leven": "^3.1.0",
     "lodash.pick": "^4.4.0"
+  },
+  "resolutions": {
+    "@types/node": "8"
   }
 }
