--- a/package.json
+++ b/package.json
@@ -14,39 +14,40 @@
   },
   "dependencies": {
     "@fortawesome/fontawesome-free": "^5.5.0",
-    "buefy": "^0.7.0",
+    "buefy": "^0.8.4",
     "bulma-divider": "^2.0.1",
-    "copy-text-to-clipboard": "^1.0.4",
+    "copy-text-to-clipboard": "^2.1.0",
     "flag-icon-css": "^3.2.1",
     "highlight.js": "^9.13.1",
     "jump.js": "^1.0.2",
-    "typeface-fira-mono": "^0.0.54",
+    "typeface-fira-mono": "^0.0.72",
     "vue": "^2.5.17",
-    "vue-class-component": "^6.3.2",
+    "vue-class-component": "^7.1.0",
     "vue-fragment": "^1.1.0",
-    "vue-highlight.js": "^2.2.0",
+    "vue-highlight.js": "^3.1.0",
     "vue-progressbar": "^0.7.5",
-    "vue-property-decorator": "^7.0.0",
+    "vue-property-decorator": "^8.2.2",
     "vue-router": "^3.0.1"
   },
   "devDependencies": {
     "@gluons/prettier-config": "^2.0.0",
-    "@starptech/prettyhtml": "^0.5.1",
+    "@starptech/prettyhtml": "^0.10.0",
+    "@types/highlight.js": "^9.12.3",
     "@types/jump.js": "^1.0.2",
     "@types/node": "8",
     "@types/signale": "^1.2.0",
     "@vue/cli-plugin-typescript": "^3.1.1",
     "@vue/cli-service": "^3.1.2",
     "browserslist-config-vue": "^1.0.3",
-    "cross-env": "^5.2.0",
+    "cross-env": "^6.0.0",
     "jstransformer-escape-html": "^1.1.0",
     "node-sass": "^4.10.0",
     "npm-run-all": "^4.1.3",
     "prettier": "^1.14.3",
-    "sass-loader": "^7.0.1",
+    "sass-loader": "^8.0.0",
     "signale": "^1.3.0",
-    "sitemap": "^2.1.0",
-    "ts-node": "^7.0.1",
+    "sitemap": "^4.1.1",
+    "ts-node": "^8.4.1",
     "tslint": "^5.11.0",
     "tslint-config-gluons": "^2.0.3",
     "typescript": "^3.1.6",
