--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "vue-highlight.js": "^3.1.0",
     "vue-progressbar": "^0.7.5",
     "vue-property-decorator": "^8.2.2",
-    "vue-router": "^3.0.1"
+    "vue-router": "^3.0.1",
+    "vue-thailand-address": "^3.2.0"
   },
   "devDependencies": {
     "@gluons/prettier-config": "^2.0.0",
