--- a/package.json
+++ b/package.json
@@ -43,35 +43,38 @@
     "vue": ">=2.4.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.8.7",
+    "@babel/core": "^7.12.9",
     "@gluons/vue-pack": "^1.20.3",
     "@gluons/vue-pack-banner-plugin": "^1.20.3",
     "@gluons/vue-pack-cli": "^1.20.3",
     "@gluons/vue-pack-copy-plugin": "^1.20.3",
     "@gluons/vue-pack-splitchunks-plugin": "^1.20.3",
-    "@types/copy-webpack-plugin": "^6.0.0",
-    "@types/jest": "^26.0.0",
+    "@types/copy-webpack-plugin": "^6.3.0",
+    "@types/jest": "^26.0.15",
     "@types/lodash.pick": "^4.4.6",
     "@types/node": "10",
     "@types/webpack-node-externals": "^2.0.0",
-    "@vue/test-utils": "^1.0.0-beta.31",
+    "@vue/test-utils": "^1.1.1",
     "babel-core": "^7.0.0-bridge.0",
     "chalk": "^4.0.0",
     "cp-file": "^9.0.0",
-    "jest": "^26.0.0",
-    "ts-jest": "^26.0.0",
+    "jest": "^26.6.3",
+    "ts-jest": "^26.4.4",
     "ts-node": "^9.0.0",
-    "tslint": "^6.0.0",
-    "tslint-config-gluons": "^2.1.0",
-    "typescript": "^4.0.0",
-    "vue": "^2.6.11",
-    "vue-class-component": "^7.2.3",
-    "vue-jest": "^3.0.5",
-    "vue-property-decorator": "^9.0.0",
-    "vue-template-compiler": "^2.6.11"
+    "tslint": "^6.1.3",
+    "tslint-config-gluons": "^2.2.0",
+    "typescript": "^4.1.2",
+    "vue": "^2.6.12",
+    "vue-class-component": "^7.2.6",
+    "vue-jest": "^3.0.7",
+    "vue-property-decorator": "^9.1.2",
+    "vue-template-compiler": "^2.6.12"
   },
   "dependencies": {
     "leven": "^3.1.0",
     "lodash.pick": "^4.4.0"
+  },
+  "resolutions": {
+    "node-sass": "4"
   }
 }
