--- a/package.json
+++ b/package.json
@@ -75,6 +75,7 @@
     "lodash.pick": "^4.4.0"
   },
   "resolutions": {
-    "node-sass": "4"
+    "node-sass": "6",
+    "sass-loader": "10"
   }
 }
